// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-badge-beta #render should render component as expected (1) 1`] = `
<gux-badge-beta>
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (2) 1`] = `
<gux-badge-beta accent="info">
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (3) 1`] = `
<gux-badge-beta accent="success">
  <mock:shadow-root>
    <div class="gux-badge gux-neutral gux-success">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (4) 1`] = `
<gux-badge-beta accent="warn">
  <mock:shadow-root>
    <div class="gux-badge gux-neutral gux-warn">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (5) 1`] = `
<gux-badge-beta accent="error">
  <mock:shadow-root>
    <div class="gux-badge gux-error gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (6) 1`] = `
<gux-badge-beta accent="info" bold="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-info gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (7) 1`] = `
<gux-badge-beta accent="success" bold="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-neutral gux-success">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (8) 1`] = `
<gux-badge-beta accent="warn" bold="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-neutral gux-warn">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (9) 1`] = `
<gux-badge-beta accent="error" bold="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-error gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (10) 1`] = `
<gux-badge-beta accent="info" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (11) 1`] = `
<gux-badge-beta accent="success" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-neutral gux-success">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (12) 1`] = `
<gux-badge-beta accent="warn" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-neutral gux-warn">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (13) 1`] = `
<gux-badge-beta accent="error" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-error gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (14) 1`] = `
<gux-badge-beta accent="info" bold="" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-info gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (15) 1`] = `
<gux-badge-beta accent="success" bold="" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-neutral gux-success">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (16) 1`] = `
<gux-badge-beta accent="warn" bold="" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-neutral gux-warn">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (17) 1`] = `
<gux-badge-beta accent="error" bold="" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-error gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (18) 1`] = `
<gux-badge-beta accent="inherit">
  <mock:shadow-root>
    <div class="gux-badge gux-inherit gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (19) 1`] = `
<gux-badge-beta accent="inherit" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-inherit gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (20) 1`] = `
<gux-badge-beta>
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (21) 1`] = `
<gux-badge-beta accent="info">
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (22) 1`] = `
<gux-badge-beta accent="success">
  <mock:shadow-root>
    <div class="gux-badge gux-neutral gux-success">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (23) 1`] = `
<gux-badge-beta accent="warn">
  <mock:shadow-root>
    <div class="gux-badge gux-neutral gux-warn">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (24) 1`] = `
<gux-badge-beta accent="error">
  <mock:shadow-root>
    <div class="gux-badge gux-error gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (25) 1`] = `
<gux-badge-beta accent="info" bold="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-info gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (26) 1`] = `
<gux-badge-beta accent="success" bold="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-neutral gux-success">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (27) 1`] = `
<gux-badge-beta accent="warn" bold="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-neutral gux-warn">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (28) 1`] = `
<gux-badge-beta accent="error" bold="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-error gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (29) 1`] = `
<gux-badge-beta accent="info" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (30) 1`] = `
<gux-badge-beta accent="success" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-neutral gux-success">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (31) 1`] = `
<gux-badge-beta accent="warn" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-neutral gux-warn">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (32) 1`] = `
<gux-badge-beta accent="error" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-error gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (33) 1`] = `
<gux-badge-beta accent="info" bold="" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-info gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (34) 1`] = `
<gux-badge-beta accent="success" bold="" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-neutral gux-success">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (35) 1`] = `
<gux-badge-beta accent="warn" bold="" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-neutral gux-warn">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (36) 1`] = `
<gux-badge-beta accent="error" bold="" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-error gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (37) 1`] = `
<gux-badge-beta accent="inherit">
  <mock:shadow-root>
    <div class="gux-badge gux-inherit gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (38) 1`] = `
<gux-badge-beta accent="inherit" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-inherit gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (1) 1`] = `
<gux-badge-beta>
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (2) 1`] = `
<gux-badge-beta color="neutral">
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (3) 1`] = `
<gux-badge-beta color="green">
  <mock:shadow-root>
    <div class="gux-badge gux-green gux-info">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: green
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (4) 1`] = `
<gux-badge-beta color="yellow">
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-yellow">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: yellow
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (5) 1`] = `
<gux-badge-beta color="red">
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-red">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: red
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (6) 1`] = `
<gux-badge-beta bold="" color="neutral">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-info gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (7) 1`] = `
<gux-badge-beta bold="" color="green">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-green gux-info">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: green bold
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (8) 1`] = `
<gux-badge-beta bold="" color="yellow">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-info gux-yellow">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: yellow bold
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (9) 1`] = `
<gux-badge-beta bold="" color="red">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-info gux-red">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: red bold
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (10) 1`] = `
<gux-badge-beta color="neutral" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (11) 1`] = `
<gux-badge-beta color="green" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-green gux-info">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: green
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (12) 1`] = `
<gux-badge-beta color="yellow" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-yellow">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: yellow
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (13) 1`] = `
<gux-badge-beta color="red" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-red">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: red
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (14) 1`] = `
<gux-badge-beta bold="" color="neutral" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-info gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (15) 1`] = `
<gux-badge-beta bold="" color="green" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-green gux-info">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: green bold
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (16) 1`] = `
<gux-badge-beta bold="" color="yellow" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-info gux-yellow">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: yellow bold
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (17) 1`] = `
<gux-badge-beta bold="" color="red" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-info gux-red">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: red bold
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (18) 1`] = `
<gux-badge-beta color="inherit">
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-inherit">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label:
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (19) 1`] = `
<gux-badge-beta color="inherit" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-inherit">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label:
      </div>
    </div>
  </mock:shadow-root>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (20) 1`] = `
<gux-badge-beta>
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (21) 1`] = `
<gux-badge-beta color="neutral">
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (22) 1`] = `
<gux-badge-beta color="green">
  <mock:shadow-root>
    <div class="gux-badge gux-green gux-info">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: green
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (23) 1`] = `
<gux-badge-beta color="yellow">
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-yellow">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: yellow
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (24) 1`] = `
<gux-badge-beta color="red">
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-red">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: red
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (25) 1`] = `
<gux-badge-beta bold="" color="neutral">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-info gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (26) 1`] = `
<gux-badge-beta bold="" color="green">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-green gux-info">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: green bold
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (27) 1`] = `
<gux-badge-beta bold="" color="yellow">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-info gux-yellow">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: yellow bold
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (28) 1`] = `
<gux-badge-beta bold="" color="red">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-info gux-red">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: red bold
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (29) 1`] = `
<gux-badge-beta color="neutral" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (30) 1`] = `
<gux-badge-beta color="green" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-green gux-info">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: green
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (31) 1`] = `
<gux-badge-beta color="yellow" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-yellow">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: yellow
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (32) 1`] = `
<gux-badge-beta color="red" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-red">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: red
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (33) 1`] = `
<gux-badge-beta bold="" color="neutral" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-info gux-neutral">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: neutral bold
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (34) 1`] = `
<gux-badge-beta bold="" color="green" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-green gux-info">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: green bold
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (35) 1`] = `
<gux-badge-beta bold="" color="yellow" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-info gux-yellow">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: yellow bold
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (36) 1`] = `
<gux-badge-beta bold="" color="red" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-bold gux-info gux-red">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label: , color: red bold
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (37) 1`] = `
<gux-badge-beta color="inherit">
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-inherit">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label:
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;

exports[`gux-badge-beta #render should render component as expected (deprecated) (38) 1`] = `
<gux-badge-beta color="inherit" dimmed="">
  <mock:shadow-root>
    <div class="gux-badge gux-info gux-inherit">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        badge with label:
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="subtract"></gux-icon>
  Badge
</gux-badge-beta>
`;
